// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
<<<<<<< HEAD
exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel by clicking outside the panel 1`] = `
=======
exports[`shared/ButtonWithPanel opens the panel when the button is clicked  1`] = `
>>>>>>> 8612dfdb... Adds tests for opening and closing the panel
=======
exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel by clicking outside the panel 1`] = `
>>>>>>> c5cc1f91... change
<div
  class="buttonWithPanel button open"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> c5cc1f91... change
exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel by clicking outside the panel 2`] = `
<div
  class="buttonWithPanel button open"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel when the escape key is pressed 1`] = `
<div
  class="buttonWithPanel button open"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel opens the panel when the button is clicked and closes the panel when the escape key is pressed 2`] = `
<<<<<<< HEAD
=======
exports[`shared/ButtonWithPanel opens the panel when the button is clicked  2`] = `
>>>>>>> 8612dfdb... Adds tests for opening and closing the panel
=======
>>>>>>> c5cc1f91... change
<div
  class="buttonWithPanel button"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel renders a button with a panel 1`] = `
<div
  class="buttonWithPanel button open"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel renders a disabled button 1`] = `
<div
  class="buttonWithPanel button"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      disabled=""
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shared/ButtonWithPanel renders the ButtonWithPanel with a closed panel 1`] = `
<div
  class="buttonWithPanel button"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton buttonButton"
      type="button"
      value="My Button"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open panel"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <div>
          Panel content
        </div>
      </div>
    </div>
  </div>
</div>
`;
